@@ -21,10 +21,10 @@ has abort => (is => 'rw');
     for ( my $i = $#levels ; $i >= 0 ; $i-- ) {
 
         my $name  = $levels[$i];
-        
+
         my $level = 1 << $i;
         $summed_level |= $level;
-        
+
         $LEVELS{$name} = $level;
         $LEVEL_MATCH{$name} = $summed_level;
 
@@ -112,7 +112,7 @@ sub _send_to_log {
 # Alias _body to body, add a before modifier to warn..
 my $meta = __PACKAGE__->meta; # Calling meta method here fine as we happen at compile time.
 $meta->add_method('body', $meta->get_method('_body'));
-my %package_hash; # Only warn once per method, per package. 
+my %package_hash; # Only warn once per method, per package.
                   # I haven't provided a way to disable them, patches welcome.
 $meta->add_before_method_modifier('body', sub {
     my $class = blessed(shift);
@@ -242,8 +242,8 @@ Is the log level active?
 
 =head2 abort
 
-Should Catalyst emit logs for this request? Will be reset at the end of 
-each request. 
+Should Catalyst emit logs for this request? Will be reset at the end of
+each request.
 
 *NOTE* This method is not compatible with other log apis, so if you plan
 to use Log4Perl or another logger, you should call it like this:
