@@ -1,5 +1,10 @@
 # This file documents the revision history for Perl extension Catalyst.
 
+        - Various POD tweaks. (hdp, dandv)
+        - Fix formatting error in the regex fallback warning. (rafl)
+        - Convert the dispatcher's BUILD method to attribute builders to not
+          override the BUILD method from
+          MooseX::Emulate::Class::Accessor::Fast. (rafl)
         - Fix classes without metaclasses restarting, when not using
           B::Hooks::OP::Check::StashChange (t0m)
         - Fix the unattached chain debug table for endpoints with no
@@ -7,7 +12,6 @@
         - Turn of test aggregation by default. Only aggregate if the
           AGGREGATE_TESTS environment variable is set and a recent
           Test::Aggregate is available. (rafl)
-        - POD formatting fix for Catalyst::Test (Dan Dascalescu)
         - Bump to MooseX::MethodAttributes 0.09, to gain the
           get_nearest_methods_with_attributes method allowing methods without
           attributes in a subclass to override those with attributes in a
